tests/execution_spec/snapshots/execution_spec__showcase.md_test_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "No Config URL specified"
      }
    ]
  }
}
