tests/execution_spec/snapshots/execution_spec__test-add-field-error.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "Query",
      "@addField",
      "street"
    ],
    "description": "Path [user, address, street] does not exist"
  }
]
