tests/execution_spec/snapshots/execution_spec__test-add-link-to-empty-config.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

enum Foo {
  BAR
  BAZ
}

scalar JSON

scalar PhoneNumber

type Query {
  foo: Foo
  hello: String
}

scalar Url

schema {
  query: Query
}
