tests/execution_spec/snapshots/execution_spec__test-all-blueprint-errors.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "foo"
    ],
    "description": null
  },
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Mutation",
      "a"
    ],
    "description": null
  },
  {
    "message": "type is used in input and output",
    "trace": [
      "B"
    ],
    "description": null
  },
  {
    "message": "expected string",
    "trace": [
      "Query",
      "bar",
      "@expr"
    ],
    "description": null
  }
]
