tests/execution_spec/snapshots/execution_spec__test-custom-types.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

type Mut {
  insertPost(input: PostInput): Post
}

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

input PostInput {
  body: String
  title: String
  userId: Int
}

type Que {
  posts: [Post]
}

scalar Url

schema {
  query: Que
  mutation: Mut
}
