tests/execution_spec/snapshots/execution_spec__test-expr.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  hello: String @expr(body: "Hello from server")
}
