tests/execution_spec/snapshots/execution_spec__test-groupby-without-batching.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "GroupBy can only be applied if batching is enabled",
    "trace": [
      "Query",
      "user",
      "@http"
    ],
    "description": null
  }
]
