tests/execution_spec/snapshots/execution_spec__test-grpc-invalid-method-format.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Invalid method format: abc.NewsService. Expected format is <package>.<service>.<method>",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
